add Dispaly Field

--- a/plugin/html/config.html
+++ b/plugin/html/config.html
@@ -14,6 +14,20 @@
         </div>
       </label>
     </p>
+
+    <p class="kintoneplugin-row">
+      <label for="message">
+        レコードを識別するための表示フィールドを指定してください。（文字列１行のみ）
+        <div class="kintoneplugin-select-outer">
+          <div class="kintoneplugin-select">
+            <div class="field-selection-area-2">
+                <!-- JavaScriptで<select>エレメントがここに挿入されます -->
+            </div>
+          </div>
+        </div>
+      </label>
+    </p>
+
     <p class="kintoneplugin-row">
         <button type="button" class="js-cancel-button kintoneplugin-button-dialog-cancel">Cancel</button>
         <button class="kintoneplugin-button-dialog-ok">Save</button>
